welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code

var a :Boolean =false
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  if ( aSmile==true || bSmile==true){
    a=true
  }
}